[gd_scene load_steps=9 format=3 uid="uid://bsndnmt350j7i"]

[ext_resource type="Script" uid="uid://bp2wl02teb72g" path="res://src/entities/building/tavern.gd" id="1_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_top_main"]
size = Vector2(480, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_top_wing"]
size = Vector2(121, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_side_short"]
size = Vector2(20, 100.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_bottom_left"]
size = Vector2(180, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_bottom_right"]
size = Vector2(180, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_door_collision"]
size = Vector2(100, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_door_area"]
size = Vector2(140, 120)

[node name="Tavern" type="StaticBody2D" groups=["Building"]]
script = ExtResource("1_script")

[node name="FloorMain" type="ColorRect" parent="."]
z_index = -1
offset_left = -220.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = 180.0
mouse_filter = 2
color = Color(0.28, 0.22, 0.18, 1)

[node name="FloorWingLeft" type="ColorRect" parent="."]
z_index = -1
offset_left = -320.0
offset_top = -80.0
offset_right = -220.0
offset_bottom = 120.0
mouse_filter = 2
color = Color(0.28, 0.22, 0.18, 1)

[node name="FloorWingRight" type="ColorRect" parent="."]
z_index = -1
offset_left = 220.0
offset_top = -80.0
offset_right = 320.0
offset_bottom = 120.0
mouse_filter = 2
color = Color(0.28, 0.22, 0.18, 1)

[node name="WallTopMain" type="ColorRect" parent="."]
offset_left = -240.0
offset_top = -200.0
offset_right = 240.0
offset_bottom = -180.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallTopWingLeft" type="ColorRect" parent="."]
offset_left = -340.0
offset_top = -100.0
offset_right = -220.0
offset_bottom = -80.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallTopWingRight" type="ColorRect" parent="."]
offset_left = 220.0
offset_top = -100.0
offset_right = 340.0
offset_bottom = -80.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallLeft" type="ColorRect" parent="."]
offset_left = -240.0
offset_top = -200.0
offset_right = -220.0
offset_bottom = -80.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallLeftWing" type="ColorRect" parent="."]
offset_left = -340.0
offset_top = -100.0
offset_right = -320.0
offset_bottom = 140.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallLeftInner" type="ColorRect" parent="."]
offset_left = -240.0
offset_top = 120.0
offset_right = -220.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallRight" type="ColorRect" parent="."]
offset_left = 220.0
offset_top = -200.0
offset_right = 240.0
offset_bottom = -80.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallRightWing" type="ColorRect" parent="."]
offset_left = 320.0
offset_top = -100.0
offset_right = 340.0
offset_bottom = 140.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallRightInner" type="ColorRect" parent="."]
offset_left = 220.0
offset_top = 120.0
offset_right = 240.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallBottomWingLeft" type="ColorRect" parent="."]
offset_left = -340.0
offset_top = 120.0
offset_right = -220.0
offset_bottom = 140.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallBottomWingRight" type="ColorRect" parent="."]
offset_left = 220.0
offset_top = 120.0
offset_right = 340.0
offset_bottom = 140.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallBottomLeft" type="ColorRect" parent="."]
offset_left = -240.0
offset_top = 180.0
offset_right = -60.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="WallBottomRight" type="ColorRect" parent="."]
offset_left = 60.0
offset_top = 180.0
offset_right = 240.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(0.5, 0.3, 0.2, 1)

[node name="CollisionTopMain" type="CollisionShape2D" parent="."]
position = Vector2(0, -190)
shape = SubResource("RectangleShape2D_wall_top_main")

[node name="CollisionTopWingLeft" type="CollisionShape2D" parent="."]
position = Vector2(-280, -90)
shape = SubResource("RectangleShape2D_wall_top_wing")

[node name="CollisionTopWingRight" type="CollisionShape2D" parent="."]
position = Vector2(280.5, -90)
shape = SubResource("RectangleShape2D_wall_top_wing")

[node name="CollisionLeft" type="CollisionShape2D" parent="."]
position = Vector2(-230, -140)
shape = SubResource("RectangleShape2D_wall_side_short")

[node name="CollisionLeftWing" type="CollisionShape2D" parent="."]
position = Vector2(-330, -30)
shape = SubResource("RectangleShape2D_wall_side_short")

[node name="CollisionRightWing" type="CollisionShape2D" parent="CollisionLeftWing"]
position = Vector2(0, 101)
shape = SubResource("RectangleShape2D_wall_side_short")

[node name="CollisionLeftInner" type="CollisionShape2D" parent="."]
position = Vector2(-230, 160)
shape = SubResource("RectangleShape2D_wall_side_short")

[node name="CollisionRight" type="CollisionShape2D" parent="."]
position = Vector2(230, -141.25)
shape = SubResource("RectangleShape2D_wall_side_short")

[node name="CollisionRightWing" type="CollisionShape2D" parent="."]
position = Vector2(330, -30)
shape = SubResource("RectangleShape2D_wall_side_short")

[node name="CollisionRightWing" type="CollisionShape2D" parent="CollisionRightWing"]
position = Vector2(0, 100)
shape = SubResource("RectangleShape2D_wall_side_short")

[node name="CollisionRightInner" type="CollisionShape2D" parent="."]
position = Vector2(230, 159.625)
shape = SubResource("RectangleShape2D_wall_side_short")

[node name="CollisionBottomWingLeft" type="CollisionShape2D" parent="."]
position = Vector2(-280, 130)
shape = SubResource("RectangleShape2D_wall_top_wing")

[node name="CollisionBottomWingRight" type="CollisionShape2D" parent="."]
position = Vector2(280, 130)
shape = SubResource("RectangleShape2D_wall_top_wing")

[node name="CollisionBottomLeft" type="CollisionShape2D" parent="."]
position = Vector2(-150, 190)
shape = SubResource("RectangleShape2D_wall_bottom_left")

[node name="CollisionBottomRight" type="CollisionShape2D" parent="."]
position = Vector2(150, 190)
shape = SubResource("RectangleShape2D_wall_bottom_right")

[node name="DoorCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 190)
shape = SubResource("RectangleShape2D_door_collision")

[node name="DoorSprite" type="ColorRect" parent="."]
offset_left = -50.0
offset_top = 180.0
offset_right = 50.0
offset_bottom = 200.0
color = Color(0.4, 0.25, 0.1, 1)

[node name="DoorArea" type="Area2D" parent="."]
position = Vector2(0, 190)

[node name="DoorAreaCollision" type="CollisionShape2D" parent="DoorArea"]
shape = SubResource("RectangleShape2D_door_area")

[node name="Label" type="Label" parent="."]
offset_left = -240.0
offset_top = -240.0
offset_right = 240.0
offset_bottom = -205.0
theme_override_font_sizes/font_size = 28
text = "The Rusty Tankard"
horizontal_alignment = 1

[node name="BarCounter" type="ColorRect" parent="."]
offset_left = -180.0
offset_top = -150.0
offset_right = -100.0
offset_bottom = 50.0
mouse_filter = 2
color = Color(0.35, 0.25, 0.15, 1)

[node name="Fireplace" type="ColorRect" parent="."]
offset_left = 120.0
offset_top = -170.0
offset_right = 200.0
offset_bottom = -130.0
mouse_filter = 2
color = Color(0.6, 0.3, 0.1, 1)
